--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
-.content {
-    padding: 80px 200px 0;
+.cards {
+    height: 300px;
+    margin: 20px 200px 0;
 }
-.column_1 {
+.columnfirst {
     float: left;
     width: 35%;
 }
-.column_2 {
+.columnsecond {
     float: left;
     width: 45%;
+    padding-left: 60px;
 }
 .card-name {
     font-family: 'Arial Narrow', sans-serif;
@@ -15,10 +17,25 @@
     font-weight: 800;
     padding-top: 50px
 }
-.card-price {
+.card-price1 {
     position: absolute;
-    top: 100px;
-    left: 450px;
+    top: 50px;
+    left: 430px;
+    font-family: 'Arial Narrow', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    color: #fff;
+    line-height: 60px;
+    text-align: center;
+    background: #000;
+}
+.card-price2 {
+    position: absolute;
+    top: 320px;
+    left: 430px;
     font-family: 'Arial Narrow', sans-serif;
     font-size: 16px;
     font-weight: 600;
@@ -39,3 +56,32 @@
     font-family: 'Arial Narrow', sans-serif;
     font-size: 16px;
 }
+#but1{
+    color: white;
+    text-decoration: none;
+    user-select: none;
+    font-family: 'Arial Narrow', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    background: rgb(204, 77, 60);
+    padding: .7em 1.5em;
+    border: none;
+    outline: none;
+}
+#but1:hover { background: rgb(232,95,76); }
+#but1:active { background: rgb(152,15,0); }
+
+#but2{
+    color: white;
+    text-decoration: none;
+    user-select: none;
+    font-family: 'Arial Narrow', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    background: rgb(204, 77, 60);
+    padding: .7em 1.5em;
+    border: none;
+    outline: none;
+}
+#but2:hover { background: rgb(232,95,76); }
+#but2:active { background: rgb(152,15,0); }
